# minispdlog

./: CMakelists.txt  README.md
include/minispdlog/: common.h  formatter.h  level.h  logger.h  minispdlog.h  pattern_formatter.h  registry.h
include/minispdlog/details/: async_msg.h  circular_q.h  log_msg.h  mpmc_blocking_q.h  thread_pool.h  utils.h
include/minispdlog/sinks/: base_sink.h  color_console_sink.h  console_sink.h  file_sink.h
src/: CMakeLists.txt  formatter.cpp  level.cpp  logger.cpp  pattern_formatter.cpp  registry.cpp
src/details/: thread_pool.cpp  utils.cpp
tests/: CMakeLists.txt  benchmark_async.cpp  test_benchmark.cpp  test_formatter.cpp  test_level.cpp  test_logger.cpp  test_registry.cpp  test_sink.cpp  test_thread_pool.cpp
